--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "e_ecommerce_mini",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
-    "antd": "^5.24.4",
+    "@ant-design/nextjs-registry": "^1.0.2",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^18.3.5",
+    "antd": "^5.24.5",
     "axios": "^1.8.4",
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^14.2.26",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.15",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22.13.14",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
